--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
         <h3>The value of each crystal is hidden from you until you click on it.</h3>
         <h3>Each time when the game starts, the game will change the values of each crystal</h3>
     </div>
-    <div class="randomNumber"> </div>
-    <div class="winLoss">     </div>
+    <div class="gNumber"> </div>
+    <div class="wScore">     </div>
+    <div class="lScore">     </div>
     <div class="gemContainer">
-        <img src="./assets/images/Diamond.jpg" alt="Diamond">
-        <img src="./assets/images/ruby.jpg" alt="Ruby">
-        <img src="./assets/images/emerald.jpg" alt="Emerald">
-        <img src="./assets/images/amethyst.jpg" alt="Amethyst">
+        <img src="./assets/images/Diamond.jpg" alt="Diamond" class="gem1">
+        <img src="./assets/images/ruby.jpg" alt="Ruby" class="gem2">
+        <img src="./assets/images/emerald.jpg" alt="Emerald" class="gem3">
+        <img src="./assets/images/amethyst.jpg" alt="Amethyst" class="gem4">
     </div>
-    <div class="youScore"><h2>Your score is:</h2></div>
-    <div class="score"></div>
+    <div class="userNumber"></div>
+    
 
 
 
